--- a/app/src/main/res/layout/admin_activities_setup.xml
+++ b/app/src/main/res/layout/admin_activities_setup.xml
@@ -10,15 +10,17 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:text="Medi Trust Setup"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:text="Admin Control"
         android:textAllCaps="false"
-        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/layout_categorySetup"
+        android:id="@+id/layout_adminControl"
+        android:background="@drawable/custom_card_view_drawable"
+        android:layout_margin="@dimen/_10sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -29,60 +31,31 @@
         android:paddingEnd="@dimen/_15sdp"
         android:paddingBottom="@dimen/_5sdp"
         app:layout_constraintTop_toBottomOf="@id/tv_storeSetup">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Doctor profile setup"
-            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
-
         <Button
             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#1ACFCFCF"
             android:clickable="false"
-            app:icon="@drawable/ic_outline_edit_24"
+            app:icon="@drawable/ic_profile_avatar"
             app:iconTint="@android:color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-
-        android:id="@+id/layout_productSetup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:orientation="horizontal"
-        android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingEnd="@dimen/_15sdp"
-        android:paddingBottom="@dimen/_5sdp"
-        app:layout_constraintTop_toBottomOf="@id/layout_categorySetup">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Patient profile setup"
+            android:text="Manage accounts"
+            android:paddingStart="@dimen/_10sdp"
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
 
-        <Button
-            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#1ACFCFCF"
-            android:clickable="false"
-            app:icon="@drawable/ic_outline_edit_24"
-            app:iconTint="@android:color/black" />
+            android:src="@drawable/ic_forward_settings"
+            android:layout_gravity="center"
+            app:tint="@color/md_theme_primary"
+            />
     </LinearLayout>
 
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/divider_adminSetup"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        app:layout_constraintTop_toBottomOf="@+id/layout_productSetup"
-        app:layout_goneMarginTop="@dimen/_1sdp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
