--- a/app/src/main/res/layout/profile_section.xml
+++ b/app/src/main/res/layout/profile_section.xml
@@ -59,7 +59,7 @@
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/divider_profile"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_10sdp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintTop_toBottomOf="@+id/btn_viewProfile" />
 </androidx.constraintlayout.widget.ConstraintLayout>
