--- a/app/src/main/res/layout/profile_verification_section.xml
+++ b/app/src/main/res/layout/profile_verification_section.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     app:layout_constraintTop_toBottomOf="@+id/include_profileSection"
     >
     <TextView
@@ -10,24 +11,23 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:text="Profile Verification &amp; Activation"
         android:textAllCaps="false"
-        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
        />
 
     <com.google.android.material.card.MaterialCardView
-        style="@style/Widget.Material3.CardView.Outlined"
+        style="@style/Widget.Material3.CardView.Filled"
         android:id="@+id/card_profileStatus"
+       app:cardBackgroundColor="@color/md_theme_onPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:layout_marginEnd="@dimen/_15sdp"
+        android:layout_margin="@dimen/_10sdp"
         android:clickable="true"
-        app:cardBackgroundColor="@color/md_theme_surfaceContainer"
+
         android:foreground="?attr/selectableItemBackground"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/tv_profileStatus">
@@ -41,7 +41,7 @@
                 android:id="@+id/tv_statusRate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginStart="@dimen/_5sdp"
                 android:layout_weight="1"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:text="Profile Activated - Now Live!"
@@ -73,11 +73,4 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/divider_profileStatus"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        app:layout_constraintTop_toBottomOf="@+id/card_profileStatus"
-        app:layout_goneMarginTop="@dimen/_1sdp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
