--- a/app/src/main/res/layout/profile_section.xml
+++ b/app/src/main/res/layout/profile_section.xml
@@ -4,62 +4,25 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/img_profile"
-        android:layout_width="@dimen/_48sdp"
-        android:layout_height="@dimen/_48sdp"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
-        android:contentDescription="Profile Image"
-        android:focusable="true"
-        android:src="@drawable/ic_profile_avatar"
-        app:civ_border_color="@color/md_theme_primary_mediumContrast"
-        app:civ_border_width="@dimen/_1sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="VectorDrawableCompat" />
 
-    <TextView
-        android:id="@+id/tv_profileName"
-        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:paddingStart="@dimen/_10sdp"
-        android:text="Azharul Islam"
-        android:drawableEnd="@drawable/ic_verified_profile"
-        android:drawableTint="@color/colorMediTrust"
-        android:drawablePadding="@dimen/_10sdp"
-        app:layout_constraintStart_toEndOf="@+id/img_profile"
-        app:layout_constraintTop_toTopOf="@+id/img_profile" />
-
-    <TextView
-        android:id="@+id/tv_profileTypeName"
-        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:paddingStart="@dimen/_10sdp"
-        android:text="Cardiologist "
-        app:layout_constraintStart_toEndOf="@+id/img_profile"
-        app:layout_constraintTop_toBottomOf="@+id/tv_profileName" />
-
-    <Button
-        android:id="@+id/btn_viewProfile"
-        style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="View profile"
-        app:layout_constraintTop_toBottomOf="@+id/tv_profileTypeName"
-        app:layout_constraintStart_toStartOf="@+id/tv_profileTypeName"
-        android:paddingTop="10dp"
+    <include android:id="@+id/include_profileAdmin"
+        layout="@layout/profile_admin_section"
+        android:visibility="gone"
         />
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/divider_profile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_15sdp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_viewProfile" />
+    <!--Doctor user section-->
+    <include android:id="@+id/include_profileDoctor"
+        layout="@layout/profile_doctor_section"
+        android:visibility="gone"
+        />
+    <!--Patient user section-->
+    <include android:id="@+id/include_profilePatient"
+        layout="@layout/profile_patient_section"
+        android:visibility="gone"
+        />
+    <!--Guest user section-->
+    <include
+        android:id="@+id/include_profileGuest"
+        layout="@layout/profile_guest_section"
+        android:visibility="gone"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
